<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondActivity">

    <TextView
        android:id="@+id/tv6"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/hobby"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv5"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/gender"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv11"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/tv10" />

    <TextView
        android:id="@+id/tv12"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toBottomOf="@+id/tv11" />

    <TextView
        android:id="@+id/tv10"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/user"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/tv12" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv5"
        app:layout_constraintTop_toBottomOf="@+id/tv7" />

    <TextView
        android:id="@+id/tv9"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv6"
        app:layout_constraintTop_toBottomOf="@+id/tv8" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonpoint"
        android:drawableStart="@drawable/returnn"
        android:text="@string/returnn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv9" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/go"
        android:drawableEnd="@drawable/next"
        android:background="@drawable/buttonpoint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/tv9" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Fourth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt1" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="Fifth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bt5"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Sixth"
        app:layout_constraintStart_toEndOf="@+id/bt3"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />


</androidx.constraintlayout.widget.ConstraintLayout>